--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>nuvio</title>
 </head>
-<body>
-<div id="root"></div>
+<body style="width: 100%; height: 100vh;">
+<div id="root" style="width: 100%; height: 100vh;"></div>
 <script src="./src/main.tsx" type="module"></script>
 </body>
 </html>
